--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,13 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-     <!-- <nav>
+     <nav>
       <center>
-        Copyright
-      </center> 
-    </nav> -->
+        copyright &copy; covid19-tracker.com
+      </center>
+      <center>
+        Data sourced from <b>mygov.in</b>
+      </center>
+    </nav>
   </body>
 </html>
